--- a/src/quill/quill.scss
+++ b/src/quill/quill.scss
@@ -43,6 +43,9 @@
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+.ql-editor img {
+  max-width: 100%;
+}
 .ql-editor p,
 .ql-editor ol,
 .ql-editor ul,
