--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body, html, #root {
   display: flex;
   flex: 1 1;
   flex-wrap: nowrap;
-  background: url('/bg.webp');
+  background: url('bg.webp');
   background-size: cover;
 }
 
